--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ project(NeuralNet_Layer_Cpp)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 add_executable(
-    conv_test tests/test_conv_layer.cpp
+    main src/main.cpp
 )
